--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: leguang_upgrade
 description: "乐逛升级检测组件，适用android/ios"
-version: 0.0.1
-homepage:
+version: 0.0.2
+homepage: https://www.guopi.xin
+repository: https://github.com/error-code/leguang_upgrade
+issue_tracker: https://github.com/error-code/leguang_upgrade/issues
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -12,7 +14,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   app_installer: ^1.3.1
-  dio: ^5.7.0
+  dio: ^5.8.0+1
   path_provider: ^2.1.5
 
 dev_dependencies:
